--- a/LayuiDemo/Pages/03Modules/01Layer.html
+++ b/LayuiDemo/Pages/03Modules/01Layer.html
@@ -155,7 +155,11 @@
 
         //anim - 动画
         //类型:number 默认0
-        //我们出场全部采用css3,这意味着除了ie6-9,
+        //我们出场全部采用css3,这意味着除了ie6-9,其他所有浏览器都是支持的,目前anim可支持的动画类型有0-6,(请注意,3.0之前的版本用的shift参数);
+
+        //maxmin - 最大化最小化
+        //类型:boolean,默认false
+        //该参数值对type:1 和type:2 有效,默认不显示最大化最小化的按钮,需要显示配置maxmin:true即可;
 
     </script>
 </body>
